tunnel: Limit who may connect to a local forward
